# zpk2sos

./: .gitignore  CMakeLists.txt  CMakePresets.json  CTestPresets.json  README.md  build.sh  pyproject.toml  zpk2sos.c
ci/: build.sh
include/: zpk2sos.h
src/: CMakeLists.txt  zpk2sos.c
test/: CMakeLists.txt  gencoeffs.py  test_coeffs.py  test_ellip.c
